--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@
   margin: 0;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   background-color: black;
   color: white;
@@ -24,16 +29,13 @@ body {
 #box {
   margin: 0 auto;
   max-width: 800px;
-  height: 400px;
+  height: 100%;
+  max-height: 800px;
+  position: relative;
   border-style: dashed;
   border-color: red;
 }
 
-@media only screen and (max-width: 786px) {
 
-  #box { 
-    width: 100vh;
-    height: 100vh; 
-  }
 
 }
